--- a/admin/pubspec.yaml
+++ b/admin/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   password_dart: ^2.0.1
   dart_jsonwebtoken: ^2.6.0
   shared_preferences: ^2.1.0
+  data_table_2: ^2.4.2
+  pluto_grid: ^5.4.3
 
 dev_dependencies:
   build_runner: any
@@ -67,5 +69,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
+    - assets/logo/
   #   - images/a_dot_ham.jpeg
 
