--- a/admin/pubspec.yaml
+++ b/admin/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.1.0
   data_table_2: ^2.4.2
   pluto_grid: ^5.4.3
+  http: ^0.13.6
 
 dev_dependencies:
   build_runner: any
