--- a/admin/pubspec.yaml
+++ b/admin/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   data_table_2: ^2.4.2
   pluto_grid: ^5.4.3
   http: ^0.13.6
+  fluentui_system_icons: ^1.1.200  
+  
+
 
 dev_dependencies:
   build_runner: any
